@@ -15,7 +15,7 @@
 	"icons":
 	{
 		"16": "images/sab2_16.png",
-		"32": "images/sab2_32.png",
+		"48": "images/sab2_48.png",
 		"128": "images/sab2_128.png"
 	},
 	"permissions":
